<resources>
    <string name="app_name">Info COVID19</string>
    <string name="home">Home</string>
    <string name="gejala">Gejala</string>
    <string name="pencegahan">Pencegahan</string>
    <string name="header1">Status Covid-19 di seluruh dunia</string>
    <string name="context1">Kasus baru hari ini</string>
    <string name="dikonfirmasi">Konfirmasi</string>
    <string name="sembuh">Sembuh</string>
    <string name="meninggal">Meninggal</string>
    <string name="tanggal">Tanggal</string>
    <string name="info">Info</string>
    <string name="covid19">COVID19</string>
    <string name="inovasi">Inovasi</string>
    <string name="indonesia">Indonesia</string>
    <string name="nol">0</string>
    <string name="title">Gejala Virus Corona (COVID19)</string>
    <string name="konten">Gejala awal infeksi virus Corona atau COVID-19 bisa menyerupai gejala flu, yaitu demam, pilek, batuk kering, sakit tenggorokan, dan sakit kepala. Setelah itu, gejala dapat hilang dan sembuh atau malah memberat. Penderita dengan gejala yang berat bisa mengalami demam tinggi, batuk berdahak bahkan berdarah, sesak napas, dan nyeri dada. Gejala-gejala tersebut muncul ketika tubuh bereaksi melawan virus Corona.</string>
    <string name="konten2">Secara umum, ada 3 gejala yang bisa menandakan seseorang terinfeksi virus Corona, yaitu:</string>
    <string name="item1">Demam (suhu tubuh di atas 38 derajat Celsius)</string>
    <string name="item2">Batuk</string>
    <string name="item3">Sesak Napas</string>
    <string name="content3">Gejala-gejala COVID-19 ini umumnya muncul dalam waktu 2 hari sampai 2 minggu setelah penderita terpapar virus Corona.</string>
    <string name="sumber">(Sumber www.alodokter.com)</string>
    <string name="konten5">Coronavirus adalah kumpulan virus yang bisa menginfeksi sistem pernapasan. Pada banyak kasus, virus ini hanya menyebabkan infeksi pernapasan ringan, seperti flu. Namun, virus ini juga bisa menyebabkan infeksi pernapasan berat, seperti infeksi paru-paru (pneumonia).</string>
    <string name="subtitle">Kapan Harus ke Dokter</string>
    <string name="konten12">Segera lakukan isolasi mandiri bila Anda mengalami gejala infeksi virus Corona (COVID-19) seperti yang telah disebutkan di atas, terutama jika dalam 2 minggu terakhir Anda berada di daerah yang memiliki kasus COVID-19 atau kontak dengan penderita COVID-19. Setelah itu, hubungi hotline COVID-19 di 119(Nasional)/112 (Samarinda) untuk mendapatkan pengarahan lebih lanjut.</string>
    <string name="content11">Bila Anda mungkin terpapar virus Corona tapi tidak mengalami gejala apa pun, Anda tidak perlu memeriksakan diri ke rumah sakit, cukup tinggal di rumah selama 14 hari dan membatasi kontak dengan orang lain. Bila muncul gejala, baru lakukan isolasi mandiri dan tanyakan kepada dokter melalui telepon atau aplikasi mengenai tindakan apa yang perlu Anda lakukan dan obat apa yang perlu Anda konsumsi.</string>
    <string name="subtitle2">Penyebab Virus Corona (COVID-19)</string>
    <string name="content10">Infeksi virus Corona atau COVID-19 disebabkan oleh coronavirus, yaitu kelompok virus yang menginfeksi sistem pernapasan. Pada sebagian besar kasus, coronavirus hanya menyebabkan infeksi pernapasan ringan sampai sedang, seperti flu. Akan tetapi, virus ini juga bisa menyebabkan infeksi pernapasan berat, seperti pneumonia, Middle-East Respiratory Syndrome (MERS) dan Severe Acute Respiratory Syndrome (SARS).</string>
    <string name="content9">Ada dugaan bahwa virus Corona awalnya ditularkan dari hewan ke manusia. Namun, kemudian diketahui bahwa virus Corona juga menular dari manusia ke manusia. Seseorang dapat tertular COVID-19 melalui berbagai cara, yaitu:</string>
    <string name="bullet">-</string>
    <string name="item4">Tidak sengaja menghirup percikan ludah (droplet) yang keluar saat penderita COVID-19 batuk atau bersin</string>
    <string name="item5">Memegang mulut atau hidung tanpa mencuci tangan terlebih dulu setelah menyentuh benda yang terkena cipratan ludah penderita COVID-19</string>
    <string name="item6">Kontak jarak dekat dengan penderita COVID-19</string>
    <string name="content8">Virus Corona dapat menginfeksi siapa saja, tetapi efeknya akan lebih berbahaya atau bahkan fatal bila terjadi pada orang lanjut usia, ibu hamil, orang yang memiliki penyakit tertentu, perokok, atau orang yang daya tahan tubuhnya lemah, misalnya pada penderita kanker.</string>
    <string name="title2">Pencegahan Penularan Virus Corona (COVID19)</string>
    <string name="content7">Infeksi virus Corona atau COVID-19 belum bisa diobati, tetapi ada beberapa langkah yang dapat dilakukan dokter untuk meredakan gejalanya dan mencegah penyebaran virus, yaitu:</string>
    <string name="item7">Merujuk penderita COVID-19 yang berat untuk menjalani perawatan dan karatina di rumah sakit rujukan</string>
    <string name="item8">Memberikan obat pereda demam dan nyeri yang aman dan sesuai kondisi penderita</string>
    <string name="item9">Menganjurkan penderita COVID-19 untuk melakukan isolasi mandiri dan istirahat yang cukup</string>
    <string name="item10">Menganjurkan penderita COVID-19 untuk banyak minum air putih untuk menjaga kadar cairan tubuh</string>
    <string name="content6">Sampai saat ini, belum ada vaksin untuk mencegah infeksi virus Corona atau COVID-19. Oleh sebab itu, cara pencegahan yang terbaik adalah dengan menghindari faktor-faktor yang bisa menyebabkan Anda terinfeksi virus ini, yaitu:</string>
    <string name="item11">Terapkan physical distancing, yaitu menjaga jarak minimal 1 meter dari orang lain, dan jangan dulu ke luar rumah kecuali ada keperluan mendesak.</string>
    <string name="item12">Rutin mencuci tangan dengan air dan sabun atau hand sanitizer yang mengandung alkohol minimal 60%, terutama setelah beraktivitas di luar rumah atau di tempat umum.</string>
    <string name="item13">Gunakan masker saat beraktivitas di tempat umum atau keramaian, termasuk saat pergi berbelanja bahan makanan.</string>
    <string name="konten6">Kondisi-kondisi yang memerlukan penanganan langsung oleh dokter di rumah sakit, seperti melahirkan, operasi, cuci darah, atau vaksinasi anak, perlu ditangani secara berbeda dengan beberapa penyesuaian selama pandemi COVID-19. Tujuannya adalah untuk mencegah penularan virus Corona selama Anda berada di rumah sakit. Konsultasikan dengan dokter mengenai tindakan terbaik yang perlu dilakukan.</string>
    <string name="provinsi_anda">Provinsi Anda</string>
    <string name="nama">Nama</string>
    <string name="hi">Hi</string>
    <string name="meninggal_hari_ini">Meninggal hari ini</string>
    <string name="masuk">Masuk</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="pakaian1">Pakaian yang di sarankan untuk masyarakat ketika keluar rumah</string>
    <string name="pakaian2">Pakaian yang di sarankan untuk masyarakat ketika melakukan pekerjaan buruh</string>
    <string name="pakaian3">Pakaian yang di sarankan untuk tenaga kesehatan ketika berinteraksi dengan pasien</string>
    <string name="provinsi">Provinsi</string>
    <string name="status_provinsi">Status Provinsi di Indonesia</string>
    <string name="lihat_semua"><![CDATA[Lihat Semua >]]></string>
    <string name="saran_masukan"><![CDATA[Saran & Masukan]]></string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="developer">Developer</string>
    <string name="share">Bagikan Aplikasi</string>
    <string name="ubah">Ubah</string>
    <string name="ubah_data">Ubah Data Diri</string>
    <string name="image">image</string>
    <string name="play">Play</string>
    <string name="isi_tentang_aplikasi">InfoCOVID19 merupakan aplikasi yang menyediakan informasi perkembangan penyebaran COVID-19. Dengan harapan Masyarakat dapat meningkatkan kewaspadaan terhadap resiko terjangkitnya virus ini.</string>
    <string name="fitur_aplikasi">InfoCOVID19 dilengkapi beberapa fitur seperti:</string>
    <string name="item14">Statistik Penyebaran COVID-19, baik seluruh Dunia, Indonesia, dan Provinsi yang ada di Indonesia</string>
    <string name="item15">Informasi tentang Gejala COVID-19</string>
    <string name="item16">Informasi tentang Pencegahan COVID-19</string>
    <string name="item17">Informasi tentang Inovasi yang telah/dapat dilakukan</string>
    <string name="pengembangan">Aplikasi dikembangan guna memenuhi Tri Dharma Perguruan Tinggi yaitu pengabdian kepada Masyarakat melalui Program KKN Tematik Fakultas Teknik Universitas Mulawarman</string>
    <string name="sumber1">Sumber : disease.sh</string>
    <string name="sumber2">Sumber : @mathdroid</string>
    <string name="ilham">Ilham</string>
    <string name="nim">(1715015025)</string>
    <string name="jurusan">Teknik Informatika</string>
    <string name="fakultas">Fakultas Teknik</string>
    <string name="universitas">Universitas Mulawarman</string>
    <string name="facebook">ilham.00025</string>
    <string name="ig">ilhamdotcom25</string>
    <string name="contact_wa">Hubungi melalui WhatsApp</string>
    <string name="contact_gmail">Hubungi melalui G-Mail</string>

    <string-array name="inovasi_name">
        <item>Bagaimana kita menghadapi COVID-19 ?</item>
        <item>Mencegah Kejahatan Siber Selama Pandemi Covid-19</item>
        <item>Sudahkah Kamu Membersihkan Smartphonemu ?</item>
        <item>Satgas COVID-19 UNMUL Produksi Jamu atau Imun Booster Drink</item>
        <item>TUTORIAL PEMBUATAN CAIRAN DESINFEKTAN DALAM PENCEGAHAN COVID-19</item>
        <item>Cara membuat Masker Jahit Tangan !</item>
    </string-array>

    <string-array name="inovasi_kode">
        <item>OpRQHOz9V3A</item>
        <item>SxPxb0DmUYE</item>
        <item>08HVxBDivyA</item>
        <item>WCqWyq7zzOc</item>
        <item>xMT5Y_QDrB4</item>
        <item>_xRJPV1UDPw</item>
    </string-array>
</resources>
