<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background9"
    android:gravity="center_vertical"
    android:padding="16dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:background="@drawable/background5" >

        <ImageButton
            android:id="@+id/btn_batal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_close_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/background8"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/background8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image" />


        <TextView
            android:id="@+id/textView45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/developer"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="133dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="40dp"
            android:elevation="8dp"
            android:src="@drawable/foto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView45"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/textView56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ilham"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView22"
            app:layout_constraintTop_toTopOf="@+id/imageView22" />

        <TextView
            android:id="@+id/textView63"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView56"
            app:layout_constraintTop_toBottomOf="@+id/textView56" />

        <TextView
            android:id="@+id/textView64"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jurusan"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView63"
            app:layout_constraintTop_toBottomOf="@+id/textView63" />

        <TextView
            android:id="@+id/textView67"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/facebook"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/imageView23"
            app:layout_constraintStart_toEndOf="@+id/imageView23"
            app:layout_constraintTop_toTopOf="@+id/imageView23" />

        <TextView
            android:id="@+id/textView68"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ig"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/imageView24"
            app:layout_constraintStart_toEndOf="@+id/imageView24"
            app:layout_constraintTop_toTopOf="@+id/imageView24" />

        <TextView
            android:id="@+id/textView65"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fakultas"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="@+id/textView64"
            app:layout_constraintTop_toBottomOf="@+id/textView64" />

        <TextView
            android:id="@+id/textView66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/universitas"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="@+id/textView65"
            app:layout_constraintTop_toBottomOf="@+id/textView65" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/icons_facebook"
            app:layout_constraintStart_toStartOf="@+id/textView66"
            app:layout_constraintTop_toBottomOf="@+id/textView66"
            android:contentDescription="@string/image" />

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/icons_instagram"
            app:layout_constraintStart_toStartOf="@+id/imageView23"
            app:layout_constraintTop_toBottomOf="@+id/imageView23"
            android:contentDescription="@string/image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>